# Movie-Review-Sentiment-Analysis-using-RNN

./: README.md  main.py  pyproject.toml
notebooks/: 1_embeddings_demo.ipynb  2_rnn.ipynb
