[project]
name = "movie-review-sentiment-analysis-using-rnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "scikeras>=0.12.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.53.1",
    "tensorboard>=2.15.2",
    "tensorflow==2.15.0",
]
